linotp (3.4~dev0-1) UNRELEASED; urgency=low

  Breaking Changes:
  * changed default `BACKUP_DIR` to `/var/backups/linotp` for deb-package
  * breaking changes to `linotp audit cleanup`:
    * option `--no-export` is removed
    * option `--export` is added to trigger the export
    * export is disabled by default. Use `linotp audit cleanup --export` to trigger it.
    * replace options `--min` and `--max` in favor of `--max-entries-to-keep` and `--cleanup-threshold`:
      * `--max-entries-to-keep` specifies the number of entries to keep in the db. Defaults to 5000.
      * `--cleanup-threshold`: When the number of entries exceeds this threshold, the cleanup process is initiated.
        Defaults to the value of `--max-entries-to-keep`.
  * The `client=` HTTP POST parameter is now looked at, and the "Authorization:"
    text field on the "System config" dialog in the web-based management UI is
    enabled, only if the `GET_CLIENT_ADDRESS_FROM_POST_DATA` config is set to a
    true value (the default is "false", for security reasons).  The `client=`
    parameter feature as a whole is deprecated and may be removed in a future
    version of LinOTP.

  Features:
  * TRUSTED_PROXIES config variable is added, through which the requests from these proxies will get their
    X_FORWARDED_FOR header removed. This config will override the trusted forwarding proxy configuration
    in the manage ui->system configuration.
  * add option `--delete-after-days` to `linotp audit cleanup`:
    Delete entries older than the given number of days (starting from the beginning of the day).
    Can't be used alongside `--max-entries-to-keep` or `--cleanup-threshold`!
  * audit log entries of `/admin/login` and `admin/logout` now state `success`, `user`, `realm` and `administrator` correctly
  * improved debug log output for TOTP resync routine
  * improved (mostly by reducing) debug log output during server start and request context.

  Fixes: