@@ -2,6 +2,7 @@ linotp (3.4~dev0-1) UNRELEASED; urgency=low
 
   Breaking Changes:
   * changed default `BACKUP_DIR` to `/var/backups/linotp` for deb-package
+  * `linotp backup create` uses `BACKUP_DIR` to save backups instead of the current directory 
   * breaking changes to `linotp audit cleanup`:
     * option `--no-export` is removed
     * option `--export` is added to trigger the export
